--- a/app/tpls/home/main/projectlist/projectDetail.html
+++ b/app/tpls/home/main/projectlist/projectDetail.html
@@ -115,7 +115,7 @@
         <div class="detailAttribute" ng-show="isAttribute==2" style="margin-top: 0px;">
             <ul class="openTableList">
                 <div class="openTableListToptitle">
-                    <span class="chatIconButton floatleft">
+                    <span class="chatIconButton floatleft" ng-click="open('addUser')">
                         <i class="iconfont icon-addpeople_fill"></i>添加成员
                     </span>
                     <div class="clear"></div>
@@ -140,7 +140,7 @@
         <div class="detailAttribute" ng-show="isAttribute==3" style="margin-top: 0px;">
             <ul class="openTableList">
                 <div class="openTableListToptitle">
-                    <span class="chatIconButton floatleft">
+                    <span class="chatIconButton floatleft" ng-click="open('addAttribute','lg')">
                         <i class="iconfont icon-addpeople_fill"></i>添加属性
                     </span>
                     <div class="clear"></div>
