--- a/app/tpls/home/main/projectlist/projectManage.html
+++ b/app/tpls/home/main/projectlist/projectManage.html
@@ -34,9 +34,12 @@
     <div class="projectBodyContent" style="top: 100px;">
         <div class="useCaseList " style="bottom:0px;overflow-y: auto;" ng-style="useCaseListStyle">
             <div class="useCaseListfunction">
-                <span class="floatleft selectNum">我负责的项目</span>
+                <span class="floatleft selectNum">我负责的项目</span>               
                 <span class="chatIconButton floatright"  ng-click="open('tableColumn')">
                     <i class="iconfont icon-liebiao"></i>自定义列                   
+                </span>
+                <span class="chatIconButton floatright"  ng-click="open('mubanCreateproject')">
+                    <i class="iconfont icon-moban"></i>模板创建项目               
                 </span>
                 <div class="clear"></div>
             </div>
