--- a/app/tpls/home/projectNavProject.html
+++ b/app/tpls/home/projectNavProject.html
@@ -5,7 +5,7 @@
         <img src="images/projectNav_search.png">
         <input class="searchBox" name="" placeholder="请输入项目名称">
     </div>
-    <div class="projectNavList">
+    <div class="projectNavList" style="top:52px">
         <ul>
             <li class="{{projectNavNow==1?'active':''}}" ng-click="projectNavNow=1">
                 <img src="images/projectNav_total.png"> 我负责的
