--- a/app/tpls/modal/createCompenent.html
+++ b/app/tpls/modal/createCompenent.html
@@ -8,33 +8,16 @@
         <li>
             <h1>组件名称：</h1>
             <input type="text" class="inputText">
-        </li>
-        <li>
-            <h1>组件版本：</h1>
-            <input type="text" class="inputText">
-        </li>
+        </li>       
         <div class="clear"></div>
-        <li class="floatleft">
+        <li>
             <h1>运行环境：</h1>
-            <select class="selectNormal">
+            <select class="selectNormal selectNormal_480">
                 <option>项目经理</option>
                 <option>测试</option>
                 <option>开发</option>
             </select>
-        </li>
-        <li class="floatleft">
-            <h1>是否继承：</h1>
-            <select class="selectNormal">
-                <option>项目经理</option>
-                <option>测试</option>
-                <option>开发</option>
-            </select>
-        </li>
-        <div class="clear"></div>
-        <li>
-            <h1>继承组件：</h1>
-            <input type="text" class="inputText">
-        </li>
+        </li>                      
         <li>
             <h1>详细描述：</h1>
             <input type="text" class="inputText">
