查看缺陷流程

--- a/app/tpls/home/main/projectlist/projectCreateProject.html
+++ b/app/tpls/home/main/projectlist/projectCreateProject.html
@@ -52,7 +52,7 @@
 									<option>默认流程</option>
 									<option>项目1流程</option>
 								</select>
-								<span style="color: #48a1ff;font-size: 14px;margin-left: 40px;cursor: pointer;">查看缺陷流程</span>
+								<span style="color: #48a1ff;font-size: 14px;margin-left: 40px;cursor: pointer;" ng-click="open('checkProcess','lg')">查看缺陷流程</span>
 							</li>
 							<div class="clear"></div>
 						</ul>
