--- a/app/tpls/home/main/bug/projectBugManage.html
+++ b/app/tpls/home/main/bug/projectBugManage.html
@@ -84,17 +84,17 @@
                 <i class="iconfont icon-unfold"></i>
             </div>
             <ul class="dropdown-menu dropdown-menu1 tableDropdownMenu" dropdown-menu role="menu">
-                <li>
+                <li class="datetimePicker">
                     <a>开始时间：
-                                <input type="text" class="inputText inputTextl_250" datepicker-popup="{{format}}" ng-model="dat1" is-open="popup1.opened" alt-input-formats="altInputFormats" ng-click="$event.stopPropagation();open1()" close-text="关闭" min-date="dat" clear-text="清空" current-text="今天" />
-                                <div class="clear"></div>
-                            </a>
+                        <input type="text" class="inputText inputTextl_250" datepicker-popup="{{format}}" ng-model="dat1" is-open="popup1.opened" alt-input-formats="altInputFormats" ng-click="$event.stopPropagation();open1()" close-text="关闭" min-date="dat" clear-text="清空" current-text="今天" />
+                        <div class="clear"></div>
+                    </a>
                 </li>
-                <li>
+                <li class="datetimePicker">
                     <a>结束时间：
-                                <input type="text" class="inputText inputTextl_250" datepicker-popup="{{format1}}" ng-model="dat1" is-open="popup2.opened" alt-input-formats="altInputFormats1" ng-click="$event.stopPropagation();open2()" close-text="关闭" min-date="dat" clear-text="清空" current-text="今天" />
-                                <div class="clear"></div>
-                            </a>
+                        <input type="text" class="inputText inputTextl_250" datepicker-popup="{{format1}}" ng-model="dat1" is-open="popup2.opened" alt-input-formats="altInputFormats1" ng-click="$event.stopPropagation();open2()" close-text="关闭" min-date="dat" clear-text="清空" current-text="今天" />
+                        <div class="clear"></div>
+                    </a>
                 </li>
                 <li class="marginb_10">
                     <a>
