--- a/app/tpls/home/projectNavBug.html
+++ b/app/tpls/home/projectNavBug.html
@@ -1,24 +1,120 @@
 <style type="text/css">
 </style>
 <div class="projectNav" style="overflow: hidden;">
-    <div class="searchPanel">
-        <img src="images/projectNav_search.png">
-        <input class="searchBox" name="" placeholder="请输入项目名称">
-    </div>
     <div class="projectNavList">
-        <ul>
+        <div class="title">
+            过滤器
+            <span class="chatIconButton floatright treefunicon" data-tip="新建过滤器">
+                <i class="iconfont icon-add"></i>
+            </span>
+        </div>
+        <ul class="projectNavListContent">
             <li class="{{projectNavNow==1?'active':''}}" ng-click="projectNavNow=1">
-                <i class="iconfont icon-quanbu_s" style="width: 32px;font-size: 28px;float: left;margin: 0px 10px 0px 15px;color: #f4ea29;"></i>全部缺陷
-                <span>10</span>
+                <i class="iconfont icon-shaixuan i_color6 filterIcon"></i>
+                <span class="filtername">全部用例</span>
             </li>
             <li class="{{projectNavNow==2?'active':''}}" ng-click="projectNavNow=2">
-                <i class="iconfont icon-wode-BUGtijiao" style="width: 32px;font-size: 28px;float: left;margin: 0px 10px 0px 15px;color: #cb169e;"></i>我提交的缺陷
-                <span>2</span>
-            </li>
-            <li class="{{projectNavNow==3?'active':''}}" ng-click="projectNavNow=3">
-                <i class="iconfont icon-daiwochuli" style="width: 32px;font-size:28px;float: left;margin: 0px 10px 0px 15px;color: #df9e0f;"></i>待我处理的缺陷
-                <span>2</span>
+                <i class="iconfont icon-shaixuan i_color7 filterIcon"></i>
+                <span class="filtername">我创建的用例</span>
             </li>
         </ul>
+    </div>
+    <div class="leftNavList projectNavList " style="top: 120px;">
+        <div class="title">
+            过滤器
+            <span class="chatIconButton floatright treefunicon" data-tip="存储为新的过滤器">
+                <i class="iconfont icon-add"></i>
+            </span>
+        </div>
+        <div class="customFilterTitle">
+            <select>
+                <option>未选择过滤器</option>
+                <option>自定义过滤器</option>
+                <option>自定义过滤器1</option>
+                <option>自定义过滤器1自定义过滤器</option>
+            </select>
+        </div>
+        <div class="customFilterContent customFilterContent1">
+            <ul class="" accordion close-others="true">
+                <li accordion-group>
+                    <div accordion-heading>
+                        <span data-tip="全选"><i class="iconfont icon-quanxuan selectAll"></i></span>
+                        <span>缺陷等级</span>
+                        <i class="iconfont  floatright openFilter icon-unfold"></i>
+                    </div>
+                    <ol class="customFilterSelect">
+                        <li class="defaultcheckBox">
+                            <input class="floatleft" type="checkbox" name="">
+                            <span title="中及缺陷身上的呵呵大家的交付解放军解放" class="defaultcheckText">中及缺陷身上的呵呵大家的交付解放军解放</span>
+                        </li>
+                        <li class="defaultcheckBox">
+                            <input class="floatleft" type="checkbox" name="">
+                            <span class="defaultcheckText">低</span>
+                        </li>
+                        <li class="defaultcheckBox">
+                            <input class="floatleft" type="checkbox" name="">
+                            <span class="defaultcheckText">高</span>
+                        </li>
+                        <div class="clear"></div>
+                    </ol>
+                </li>
+                <li accordion-group>
+                    <div accordion-heading>
+                        <span data-tip="全选"><i class="iconfont icon-quanxuan selectAll"></i></span>
+                        <span>缺陷状态</span>
+                        <i class="iconfont  floatright openFilter icon-unfold"></i>
+                    </div>
+                    <ol class="customFilterSelect">
+                        <li class="defaultcheckBox">
+                            <input class="floatleft" type="checkbox" name="">
+                            <span class="defaultcheckText">新建</span>
+                        </li>
+                        <li class="defaultcheckBox">
+                            <input class="floatleft" type="checkbox" name="">
+                            <span class="defaultcheckText">驳回</span>
+                        </li>
+                        <li class="defaultcheckBox">
+                            <input class="floatleft" type="checkbox" name="">
+                            <span class="defaultcheckText">待审</span>
+                        </li>
+                    </ol>
+                </li>
+                <li accordion-group>
+                    <div accordion-heading>
+                        <span data-tip="全选"><i class="iconfont icon-quanxuan selectAll"></i></span>
+                        <span>项目模块</span>
+                        <i class="iconfont  floatright openFilter icon-unfold"></i>
+                    </div>
+                    <ol class="customFilterSelect">
+                        <li class="defaultcheckBox">
+                            <input class="floatleft" type="checkbox" name="">
+                            <span class="defaultcheckText">新建</span>
+                        </li>
+                        <li class="defaultcheckBox">
+                            <input class="floatleft" type="checkbox" name="">
+                            <span class="defaultcheckText">驳回</span>
+                        </li>
+                        <li class="defaultcheckBox">
+                            <input class="floatleft" type="checkbox" name="">
+                            <span class="defaultcheckText">待审</span>
+                        </li>
+                    </ol>
+                </li>
+                <li accordion-group>
+                    <div accordion-heading>
+                        <span data-tip="全选"><i class="iconfont icon-quanxuan selectAll"></i></span>
+                        <span>创建时间</span>
+                        <i class="iconfont  floatright openFilter icon-unfold"></i>
+                    </div>
+                    <ol class="customFilterTime">
+                        <li class="defaultTimeSelectBox datetimePicker">
+                            <input type="text" class="timeselectInput floatleft"  datepicker-popup="{{format}}" ng-model="dat1" is-open="popup1.opened" datepicker-options="inlineOptions" alt-input-formats="altInputFormats" ng-click="$event.stopPropagation();open1()" close-text="关闭" min-date="dat" clear-text="清空" current-text="今天" />
+                            <span class="timeselectTitle">开始时间：</span>
+                            <div class="clear"></div>
+                        </li>
+                    </ol>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>   
