--- a/app/tpls/home/main/bug/projectBugManage-2017-8-28.html
+++ b/app/tpls/home/main/bug/projectBugManage-2017-8-28.html
@@ -110,6 +110,61 @@
     </div>
     <div class="projectBodyContent" style="top: 100px;">
         <div class="useCaseList" style="bottom:0px;overflow-y: auto;" ng-style="useCaseListStyle">
+            <div class="useCaseListfilter">
+                <div class="useCaseListfilterli flexRow">
+                    <span class="title flex">已选条件</span>
+                    <a href="" class="f_blue">清除筛选条件</a>
+                </div>
+                <div class="useCaseListfilterli flexRow">
+                    <span class="title1">缺陷等级：</span>
+                    <div class="flex">
+                        <span class="filterspan"><i class="iconfont icon-huiyuan i_color1"></i>中
+                            <i class="iconfont icon-delete_fill"></i>
+                        </span>
+                        <span class="filterspan"><i class="iconfont icon-huiyuan i_color2"></i>高
+                            <i class="iconfont icon-delete_fill"></i>
+                        </span>
+                        <span class="filterspan"><i class="iconfont icon-huiyuan i_color3"></i>低
+                            <i class="iconfont icon-delete_fill"></i>
+                        </span>
+                    </div>
+                </div>
+                <div class="useCaseListfilterli flexRow">
+                    <span class="title1">缺陷状态：</span>
+                    <div class="flex">
+                        <span class="filterspan"><i class="iconfont icon-huiyuan i_color4"></i>新建
+                            <i class="iconfont icon-delete_fill"></i>
+                        </span>
+                        <span class="filterspan"><i class="iconfont icon-huiyuan i_color5"></i>驳回
+                            <i class="iconfont icon-delete_fill"></i>
+                        </span>
+                        <span class="filterspan"><i class="iconfont icon-huiyuan i_color0"></i>待审
+                            <i class="iconfont icon-delete_fill"></i>
+                        </span>
+                    </div>
+                </div>
+                <div class="useCaseListfilterli flexRow">
+                    <span class="title1">项目模块：</span>
+                    <div class="flex">
+                        <span class="filterspan">
+                            <i class="iconfont icon-huiyuan i_color1"></i>
+                            登录模块登录模块登录模块登录模块登录模块登录模块登录模块登录模块
+                            <i class="iconfont icon-delete_fill"></i>
+                        </span>
+                        </span>
+                        <span class="filterspan">
+                            <i class="iconfont icon-huiyuan i_color1"></i>
+                            注册模块
+                            <i class="iconfont icon-delete_fill"></i>
+                        </span>
+                        <span class="filterspan">
+                            <i class="iconfont icon-huiyuan i_color1"></i>
+                            模块
+                            <i class="iconfont icon-delete_fill"></i>
+                        </span>
+                    </div>
+                </div>
+            </div>
             <div class="useCaseListfunction">
                 <span class="floatleft selectNum">已选中2项：</span>
                 <span class="chatIconButton">
