--- a/app/tpls/home/main/task/task.html
+++ b/app/tpls/home/main/task/task.html
@@ -27,7 +27,7 @@
                 <li><i class="iconfont icon-addpeople_fill"></i><span>新增同级节点</span></li>
             </ul>
         </div>
-        <div class="floatright btn_add" ng-click="open('newDemand','lg')">
+        <div class="floatright btn_add" ng-click="open('createFuncPoints','lg')">
             <span class="cicleicon"><i class="iconfont icon-add"></i></span> 提需求
         </div>
     </div>
