--- a/app/tpls/home/projectNavBug.html
+++ b/app/tpls/home/projectNavBug.html
@@ -35,7 +35,7 @@
             </select>
         </div>
         <div class="customFilterContent customFilterContent1">
-            <ul class="" accordion close-others="true">
+            <ul class="" accordion close-others="false">
                 <li accordion-group>
                     <div accordion-heading>
                         <span data-tip="全选"><i class="iconfont icon-quanxuan selectAll"></i></span>
@@ -43,17 +43,20 @@
                         <i class="iconfont  floatright openFilter icon-unfold"></i>
                     </div>
                     <ol class="customFilterSelect">
-                        <li class="defaultcheckBox">
-                            <input class="floatleft" type="checkbox" name="">
+                        <li class="checkBox">
+                            <input type="checkbox" name="">
+                            <i class="input-helper"></i>
                             <span title="中及缺陷身上的呵呵大家的交付解放军解放" class="defaultcheckText">中及缺陷身上的呵呵大家的交付解放军解放</span>
                         </li>
-                        <li class="defaultcheckBox">
-                            <input class="floatleft" type="checkbox" name="">
-                            <span class="defaultcheckText">低</span>
+                        <li class="checkBox">
+                            <input type="checkbox" name="">
+                            <i class="input-helper"></i>
+                            <span title="" class="defaultcheckText">低</span>
                         </li>
-                        <li class="defaultcheckBox">
-                            <input class="floatleft" type="checkbox" name="">
-                            <span class="defaultcheckText">高</span>
+                        <li class="checkBox">
+                            <input type="checkbox" name="">
+                            <i class="input-helper"></i>
+                            <span title="" class="defaultcheckText">高</span>
                         </li>
                         <div class="clear"></div>
                     </ol>
@@ -65,17 +68,20 @@
                         <i class="iconfont  floatright openFilter icon-unfold"></i>
                     </div>
                     <ol class="customFilterSelect">
-                        <li class="defaultcheckBox">
-                            <input class="floatleft" type="checkbox" name="">
-                            <span class="defaultcheckText">新建</span>
+                        <li class="checkBox">
+                            <input type="checkbox" name="">
+                            <i class="input-helper"></i>
+                            <span title="" class="defaultcheckText">新建</span>
                         </li>
-                        <li class="defaultcheckBox">
-                            <input class="floatleft" type="checkbox" name="">
-                            <span class="defaultcheckText">驳回</span>
+                        <li class="checkBox">
+                            <input type="checkbox" name="">
+                            <i class="input-helper"></i>
+                            <span title="" class="defaultcheckText">驳回</span>
                         </li>
-                        <li class="defaultcheckBox">
-                            <input class="floatleft" type="checkbox" name="">
-                            <span class="defaultcheckText">待审</span>
+                        <li class="checkBox">
+                            <input type="checkbox" name="">
+                            <i class="input-helper"></i>
+                            <span title="" class="defaultcheckText">待审</span>
                         </li>
                     </ol>
                 </li>
@@ -86,17 +92,20 @@
                         <i class="iconfont  floatright openFilter icon-unfold"></i>
                     </div>
                     <ol class="customFilterSelect">
-                        <li class="defaultcheckBox">
-                            <input class="floatleft" type="checkbox" name="">
-                            <span class="defaultcheckText">新建</span>
+                        <li class="checkBox">
+                            <input type="checkbox" name="">
+                            <i class="input-helper"></i>
+                            <span title="" class="defaultcheckText">新建</span>
                         </li>
-                        <li class="defaultcheckBox">
-                            <input class="floatleft" type="checkbox" name="">
-                            <span class="defaultcheckText">驳回</span>
+                        <li class="checkBox">
+                            <input type="checkbox" name="">
+                            <i class="input-helper"></i>
+                            <span title="" class="defaultcheckText">驳回</span>
                         </li>
-                        <li class="defaultcheckBox">
-                            <input class="floatleft" type="checkbox" name="">
-                            <span class="defaultcheckText">待审</span>
+                        <li class="checkBox">
+                            <input type="checkbox" name="">
+                            <i class="input-helper"></i>
+                            <span title="" class="defaultcheckText">待审</span>
                         </li>
                     </ol>
                 </li>
@@ -115,6 +124,9 @@
                     </ol>
                 </li>
             </ul>
+            <div class="customFilterBtn">
+                <a class="customFilterSave" href="">保存当前筛选项</a>
+            </div>
         </div>
     </div>
 </div>   
