--- a/app/tpls/home/topbarBack-stage.html
+++ b/app/tpls/home/topbarBack-stage.html
@@ -3,10 +3,11 @@
 <div class="topbar">
 	<div class="floatleft leftMenu">
 		<a class="topbarLink"><img src="/images/logo.png" style="height: 48px;"/></a>
-        <a class="topbarLink" href=""  class="current">用户管理</a>
-		<a class="topbarLink" href="" >项目管理</a>
+        <a class="topbarLink" href=""  class="current" ui-sref="userManagement">用户管理</a>
+		<a class="topbarLink" href=""  ui-sref="projectManagement">项目管理</a>
+		<a class="topbarLink" href=""  ui-sref="roleGroupManagement">角色组管理</a>
 		<a class="topbarLink" href="" >缺陷流程定制</a>
-		<a class="topbarLink" href="" >数据字典</a>
+		<a class="topbarLink" href="" ui-sref="dataDictionary">数据字典</a>
 	</div>
 	<div class="floatright rightMenu">		
         <a href="" class="topbarLink">
