--- a/app/tpls/home/main/back-stageManagement/userManagement.html
+++ b/app/tpls/home/main/back-stageManagement/userManagement.html
@@ -37,7 +37,7 @@
              	<span class="chatIconButton floatleft" ng-click="open('addUserBack-stage')">
                     <i class="iconfont icon-tianjia"></i>添加用户
                 </span>
-                <span class="chatIconButton floatleft" ng-click="">
+                <span class="chatIconButton floatleft" ng-click="open('importUser')">
                     <i class="iconfont icon-import"></i>导入用户
                 </span>
                 
