--- a/app/tpls/home/topbarBack-stage.html
+++ b/app/tpls/home/topbarBack-stage.html
@@ -6,8 +6,8 @@
         <a class="topbarLink" href=""  class="current" ui-sref="userManagement">用户管理</a>
 		<a class="topbarLink" href=""  ui-sref="projectManagement">项目管理</a>
 		<a class="topbarLink" href=""  ui-sref="roleGroupManagement">角色组管理</a>
-		<a class="topbarLink" href="" >缺陷流程定制</a>
-		<a class="topbarLink" href="" ui-sref="dataDictionary">数据字典</a>
+		<a class="topbarLink" href=""  ui-sref="defectProcess">缺陷流程定制</a>
+		<a class="topbarLink" href=""  ui-sref="dataDictionary">数据字典</a>
 	</div>
 	<div class="floatright rightMenu">		
         <a href="" class="topbarLink">
